# DropSafe

./: .gitignore  README.md
docs/: README.md  product-exploration.md  technical-spec.md
llm-services/: .env.example  README.md  pyproject.toml  requirements.txt
llm-services/app/: __init__.py  config.py  main.py  models.py
llm-services/app/services/: __init__.py  gemini.py
mobile-app/: README.md  app.json  package-lock.json  package.json
mobile-app/app/: _layout.tsx  alert.tsx  claim-details.tsx  index.tsx  login.tsx  profile-setup.tsx
mobile-app/app/(tabs)/: _layout.tsx  claims.tsx  index.tsx  plans.tsx  profile.tsx
mobile-app/components/: ui.tsx
mobile-app/context/: app-state.tsx
mobile-app/lib/: theme.ts
web-app/: README.md  package-lock.json  package.json
web-app/src/app/: globals.css  layout.tsx  page.tsx
web-app/src/app/admin/: page.tsx
web-app/src/app/admin/dashboard/: actions.ts  page.tsx
web-app/src/app/auth/: actions.ts  auth-shell.tsx
web-app/src/app/auth/forgot-password/: page.tsx
web-app/src/app/auth/login/: page.tsx
web-app/src/app/auth/reset-password/: page.tsx
web-app/src/app/dashboard/: actions.ts  page.tsx
web-app/src/app/onboarding/: page.tsx
web-app/src/app/phase-1/: page.tsx
web-app/src/app/provider/: page.tsx
web-app/src/app/worker/: page.tsx
web-app/src/components/: Navbar.tsx
web-app/src/components/auth/: password-input.tsx  submit-button.tsx
web-app/src/components/ui/: browser-mockup.tsx  phone-mockup.tsx  table.tsx
web-app/src/lib/: auth.ts  email.ts  insurance.ts  llm.ts
(+2 files in other folders)
